# condensify

./: Cargo.toml
condensify/: Cargo.toml
condensify-cli/: Cargo.toml
condensify-cli/src/: main.rs
condensify/src/: error.rs  hash.rs  lib.rs  meta-format.txt
condensify/src/condensify/: mod.rs  read.rs  write.rs
src/: argparse.rs  main.rs
