[package]
name = "condensify"
version = "0.1.0"
description = ""
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"

[dependencies]
ignore = "0.4.6"
serde = {version = "1.0.84", features = ["derive"]}
dirs = "1.0.4"
sha2 = "0.8.0"
hex = "0.3.2"
serde_json = "1.0.35"
clap = "2.32.0"
